--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
         <title>Sample web app with webpack</title>
     </head>
     <body>
-        <h1>Hello Wolrd Webpack</h1>
+        <h1>Hello World Webpack</h1>
         <div class="js-change-content">
             User
         </div>
